<resources>
    <string name="default_notification_channel_id">com.mycompany.myapp.urgent</string>
    <string name="url_google_place_photo_part1">"https://maps.googleapis.com/maps/api/place/photo?maxheigth=500&amp;maxwidth=800&amp;photo_reference="</string>
    <string name="url_google_place_photo_part3">"&amp;key=AIzaSyDsQUD7ukIhqdJYZIQxj535IvrDRrkrH08"</string>
    <string name="Api_key_google_map">"AIzaSyDsQUD7ukIhqdJYZIQxj535IvrDRrkrH08"</string>
    <string name="google_map_api_key">AIzaSyDsQUD7ukIhqdJYZIQxj535IvrDRrkrH08</string>
    <string name="facebook_app_id">989231408442739</string>
    <string name="facebook_application_id">989231408442739</string>
    <string name="fb_login_protocol_scheme">fb989231408442739</string>
    <string name="facebook_client_token">dc8ecaae428e124640ef2aa2b7c64b9e</string>
    <string name="default_web_client_id_in_string">"838688106638-45mr19aj3cao0mrj6kp18353spg7hskh.apps.googleusercontent.com"</string>
    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_map_view">Map View</string>
    <string name="bottom_navigation_menu_list_view">List View</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>

    <string name="app_name">Go4Lunch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_your_lunch">YOUR LUNCH</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="connection_succeed">CONNEXION SUCCES</string>
    <string name="error_authentication_canceled">AUTHENTIFICATION CANCELED</string>
    <string name="error_no_internet">ERROR NOT INTERNET</string>
    <string name="error_unknown_error">ERROR UNKNOW</string>
    <string name="info_no_email_found">No email found</string>
    <string name="info_no_username_found">No username found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out_message">Voulez-vous vraiment vous déconnecter ?</string>
    <string name="ok">OK</string>
    <string name="restaurant_open_now">open now</string>
    <string name="restaurant_close">close</string>
    <string name="restaurant_opening_hour_unknown">unknown</string>
    <string name="is_joining">is joining </string>
    <string name="not_photo_url">pas de url photo</string>

    <string name="receive_notification" type="id">You have chosen to receive notifications</string>
    <string name="not_receive_notification">You have chosen to no longer receive notifications</string>
    <string name="question_notification">Do you want to receive notifications ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="call">CALL</string>
    <string name="web_site">WEBSITE</string>
    <string name="like">LIKE</string>
    <string name="choice_restaurant">select</string>
    <string name="type_restaurant_address_restaurant">Type restaurant - address restaurant</string>
    <string name="name_restaurant">NAME RESTAURANT</string>
    <string name="img_restaurant">image restaurant</string>
    <string name="img_workmate">image workmate</string>
    <string name="mane_is_eating_french">Name is eating french</string>
    <string name="debug_long_string" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla odio diam, egestas eget quam in.</string>
    <string name="user_name">user name</string>
    <string name="img_search_bar">image search bar</string>
    <string name="no_restaurant_found">NO RESTAURANT FOUND</string>
    <string name="no_restaurant_choice">No restaurant selected</string>
    <string name="img_google_map">image google map</string>
    <string name="no_workmate_selected_this_restaurant">NO WORKMATE SELECTED THIS RESTAURANT</string>
    <string name="opening_hour">Opening hour</string>
    <string name="number_of_workmate">(0)</string>
    <string name="type_address">Type - address</string>
    <string name="distance">Xm</string>
    <string name="name_firstname">Name FirstName</string>
    <string name="email_user">Email User</string>
    <string name="no_like_for_this_restaurant">No like for this restaurant</string>
    <string name="no_phone_number">No Phone Number </string>
    <string name="no_web_site_link">No web site </string>
    <string name="delete_my_account">Delete Account</string>
    <string name="update_name">Change Name</string>
    <string name="new_name">new name</string>
    <string name="delete_message">Are you sure to delete your account?</string>
    <string name="available_workmates">Available workmates</string>
    <string name="i_am_hungry">I am Hungry !</string>
    <string name="give_valid_name">Give a valid name</string>

</resources>