<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sitadigi.go4lunch.ui.home.HomeFragment"
        android:label="@string/menu_your_lunch"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sitadigi.go4lunch.ui.gallery.GalleryFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sitadigi.go4lunch.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/menu_map_view"
        android:name="com.sitadigi.go4lunch.ui.mapView.MapViewFragment"
        android:label="@string/bottom_navigation_menu_map_view"
        tools:layout="@layout/fragment_map_view" />

    <fragment
        android:id="@+id/menu_list_view"
        android:name="com.sitadigi.go4lunch.ui.listView.ListViewFragment"
        android:label="@string/bottom_navigation_menu_list_view"
        tools:layout="@layout/fragment_list_view" />

    <fragment
        android:id="@+id/menu_workmates"
        android:name="com.sitadigi.go4lunch.ui.workmaters.WorkmatersFragment"
        android:label="@string/bottom_navigation_menu_workmates"
        tools:layout="@layout/fragment_workmaters" />
</navigation>