<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_map_view"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/bottom_navigation_menu_map_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_list_view"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/bottom_navigation_menu_list_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_workmates"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/bottom_navigation_menu_workmates"
        app:showAsAction="ifRoom" />

</menu>